ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(filtering)
ADD_SUBDIRECTORY(volumerendering)
ADD_SUBDIRECTORY(rendering)
ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(geovis)
ADD_SUBDIRECTORY(graphics)
ADD_SUBDIRECTORY(hybrid)
ADD_SUBDIRECTORY(imaging)
ADD_SUBDIRECTORY(infovis)
ADD_SUBDIRECTORY(parallel)
ADD_SUBDIRECTORY(views)
ADD_SUBDIRECTORY(widgets)
