ADD_LIBRARY( lapack_c 
c_abs.c
c_div.c
c_sqrt.c
cabs.c
cbdsqr.c
cgebak.c
cgebal.c
cgebd2.c
cgebrd.c
cgecon.c
cgeequ.c
cgeev.c
cgeevx.c
cgehd2.c
cgehrd.c
cgelq2.c
cgelqf.c
cgels.c
cgelsy.c
cgeqp3.c
cgeqr2.c
cgeqrf.c
cgerfs.c
cgesv.c
cgesvd.c
cgesvx.c
cgetf2.c
cgetrf.c
cgetri.c
cgetrs.c
cggbak.c
cggbal.c
cggev.c
cgghrd.c
cheev.c
chegs2.c
chegst.c
chegv.c
chetd2.c
chetrd.c
chgeqz.c
chseqr.c
clabrd.c
clacgv.c
clacon.c
clacpy.c
cladiv.c
clahqr.c
clahrd.c
claic1.c
clange.c
clanhe.c
clanhs.c
clantr.c
claqge.c
claqp2.c
claqps.c
clarf.c
clarfb.c
clarfg.c
clarft.c
clarfx.c
clartg.c
clarz.c
clarzb.c
clarzt.c
clascl.c
claset.c
clasr.c
classq.c
claswp.c
clatrd.c
clatrs.c
clatrz.c
cpotf2.c
cpotrf.c
crot.c
csrot.c
csrscl.c
csteqr.c
ctgevc.c
ctrevc.c
ctrexc.c
ctrsna.c
ctrti2.c
ctrtri.c
ctzrzf.c
cung2l.c
cung2r.c
cungbr.c
cunghr.c
cungl2.c
cunglq.c
cungql.c
cungqr.c
cungtr.c
cunm2r.c
cunmbr.c
cunml2.c
cunmlq.c
cunmqr.c
cunmr3.c
cunmrz.c
d_cnjg.c
d_imag.c
d_lg10.c
d_sign.c
dbdsdc.c
dbdsqr.c
dgebak.c
dgebal.c
dgebd2.c
dgebrd.c
dgecon.c
dgeequ.c
dgeev.c
dgeevx.c
dgehd2.c
dgehrd.c
dgelq2.c
dgelqf.c
dgels.c
dgelsy.c
dgeqp3.c
dgeqr2.c
dgeqrf.c
dgerfs.c
dgesdd.c
dgesv.c
dgesvd.c
dgesvx.c
dgetf2.c
dgetrf.c
dgetri.c
dgetrs.c
dggbak.c
dggbal.c
dggev.c
dgghrd.c
dhgeqz.c
dhseqr.c
dlabad.c
dlabrd.c
dlacon.c
dlacpy.c
dladiv.c
dlae2.c
dlaev2.c
dlaexc.c
dlag2.c
dlahqr.c
dlahrd.c
dlaic1.c
dlaln2.c
dlamch.c
dlange.c
dlanhs.c
dlanst.c
dlansy.c
dlantr.c
dlanv2.c
dlapy2.c
dlapy3.c
dlaqge.c
dlaqp2.c
dlaqps.c
dlaqtr.c
dlarf.c
dlarfb.c
dlarfg.c
dlarft.c
dlarfx.c
dlarnv.c
dlartg.c
dlaruv.c
dlarz.c
dlarzb.c
dlarzt.c
dlas2.c
dlascl.c
dlaset.c
dlasq1.c
dlasq2.c
dlasq3.c
dlasq4.c
dlasq5.c
dlasq6.c
dlasr.c
dlasrt.c
dlassq.c
dlasv2.c
dlaswp.c
dlasy2.c
dlatrd.c
dlatrs.c
dlatrz.c
dorg2l.c
dorg2r.c
dorgbr.c
dorghr.c
dorgl2.c
dorglq.c
dorgql.c
dorgqr.c
dorgtr.c
dorm2r.c
dormbr.c
dorml2.c
dormlq.c
dormqr.c
dormr3.c
dormrz.c
dpotf2.c
dpotrf.c
drscl.c
dsteqr.c
dsterf.c
dsyev.c
dsygs2.c
dsygst.c
dsygv.c
dsytd2.c
dsytrd.c
dtgevc.c
dtrevc.c
dtrexc.c
dtrsen.c
dtrsna.c
dtrsyl.c
dtrti2.c
dtrtri.c
dtrtrs.c
dtzrzf.c
dzsum1.c
f77_aloc.c
i_dnnt.c
i_nint.c
icmax1.c
ilaenv.c
izmax1.c
lsame.c
pow_ci.c
pow_dd.c
pow_di.c
pow_ri.c
pow_zi.c
r_cnjg.c
r_imag.c
r_lg10.c
r_sign.c
s_cat.c
s_cmp.c
s_copy.c
sbdsqr.c
scsum1.c
second.c
sgebak.c
sgebal.c
sgebd2.c
sgebrd.c
sgecon.c
sgeequ.c
sgeev.c
sgeevx.c
sgehd2.c
sgehrd.c
sgelq2.c
sgelqf.c
sgels.c
sgelsy.c
sgeqp3.c
sgeqr2.c
sgeqrf.c
sgerfs.c
sgesdd.c
sgesv.c
sgesvd.c
sgesvx.c
sgetf2.c
sgetrf.c
sgetri.c
sgetrs.c
sggbak.c
sggbal.c
sggev.c
sgghrd.c
shgeqz.c
shseqr.c
slabad.c
slabrd.c
slacon.c
slacpy.c
sladiv.c
slae2.c
slaev2.c
slaexc.c
slag2.c
slahqr.c
slahrd.c
slaic1.c
slaln2.c
slamch.c
slange.c
slanhs.c
slanst.c
slansy.c
slantr.c
slanv2.c
slapy2.c
slapy3.c
slaqge.c
slaqp2.c
slaqps.c
slaqtr.c
slarf.c
slarfb.c
slarfg.c
slarft.c
slarfx.c
slartg.c
slarz.c
slarzb.c
slarzt.c
slas2.c
slascl.c
slaset.c
slasq1.c
slasq2.c
slasq3.c
slasq4.c
slasq5.c
slasq6.c
slasr.c
slasrt.c
slassq.c
slasv2.c
slaswp.c
slasy2.c
slatrd.c
slatrs.c
slatrz.c
sorg2l.c
sorg2r.c
sorgbr.c
sorghr.c
sorgl2.c
sorglq.c
sorgql.c
sorgqr.c
sorgtr.c
sorm2r.c
sormbr.c
sorml2.c
sormlq.c
sormqr.c
sormr3.c
sormrz.c
spotf2.c
spotrf.c
srscl.c
ssteqr.c
ssterf.c
ssyev.c
ssygs2.c
ssygst.c
ssygv.c
ssytd2.c
ssytrd.c
stgevc.c
strevc.c
strexc.c
strsna.c
strti2.c
strtri.c
strtrs.c
stzrzf.c
z_abs.c
z_div.c
z_exp.c
z_sqrt.c
zbdsqr.c
zdrot.c
zdrscl.c
zgebak.c
zgebal.c
zgebd2.c
zgebrd.c
zgecon.c
zgeequ.c
zgeev.c
zgeevx.c
zgehd2.c
zgehrd.c
zgelq2.c
zgelqf.c
zgels.c
zgelsy.c
zgeqp3.c
zgeqr2.c
zgeqrf.c
zgerfs.c
zgesv.c
zgesvd.c
zgesvx.c
zgetf2.c
zgetrf.c
zgetri.c
zgetrs.c
zggbak.c
zggbal.c
zggev.c
zgghrd.c
zheev.c
zhegs2.c
zhegst.c
zhegv.c
zhetd2.c
zhetrd.c
zhgeqz.c
zhseqr.c
zlabrd.c
zlacgv.c
zlacon.c
zlacpy.c
zladiv.c
zlahqr.c
zlahrd.c
zlaic1.c
zlange.c
zlanhe.c
zlanhs.c
zlantr.c
zlaqge.c
zlaqp2.c
zlaqps.c
zlarf.c
zlarfb.c
zlarfg.c
zlarft.c
zlarfx.c
zlarnv.c
zlartg.c
zlarz.c
zlarzb.c
zlarzt.c
zlascl.c
zlaset.c
zlasr.c
zlassq.c
zlaswp.c
zlatrd.c
zlatrs.c
zlatrz.c
zpotf2.c
zpotrf.c
zrot.c
zsteqr.c
ztgevc.c
ztrevc.c
ztrexc.c
ztrsen.c
ztrsna.c
ztrsyl.c
ztrti2.c
ztrtri.c
ztzrzf.c
zung2l.c
zung2r.c
zungbr.c
zunghr.c
zungl2.c
zunglq.c
zungql.c
zungqr.c
zungtr.c
zunm2r.c
zunmbr.c
zunml2.c
zunmlq.c
zunmqr.c
zunmr3.c
zunmrz.c
)

IF( CMAKE_COMPILER_IS_GNUCC)
#workaround for gcc/lapack bug - optimizations mess with code that determines floating point precision
	SET_SOURCE_FILES_PROPERTIES( dlamch.c slamch.c PROPERTIES COMPILE_FLAGS "-ffloat-store" )
	IF( NOT MSVC )
		MESSAGE("Compiler optimization may lead to broken Lapack build. 
		If release build produces incorrect results (e.g. svd(rand(4)) is all NaN) 
		you should to disable optimization when compiling dlamch.c and slamch.c ")
	ENDIF( NOT MSVC )
ENDIF( CMAKE_COMPILER_IS_GNUCC)